--- a/Css/style.css
+++ b/Css/style.css
@@ -15,122 +15,150 @@
     --Slightly-transparent-white-stat-headings: hsla(0, 0%, 100%, 0.6);
 }
 
-* {
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
-}
-
 body {
     background-color: var(--Very-dark-blue-main-background);
-    color: var(--White-main-heading-stats);
     font-family: 'Lexend Deca', sans-serif;
-    font-weight: 400;
+    color: var(--White-main-heading-stats);
 }
 
 /* Typography */
-.card-header {
+.stats-header {
     font-family: 'Inter', sans-serif;
-    font-size: 1.13rem;
+    font-size: clamp(2rem, 0.8864rem + 1.8182vw, 3.6rem);
     font-weight: 700;
+    line-height: 2.4rem;
 }
 
-.text-purple {
+.stats-card span {
     color: var(--Soft-violet-accent);
 }
 
-.card-description {
-    font-size: 0.63rem;
+.stats-details {
+    font-size: 1rem;
+    font-weight: 500;
     line-height: 1.7;
-    color: var(--Slightly-transparent-white-main-paragraph);
+    opacity: 0.75;
 }
 
-.card-stats .stats {
+.stats-value {
     font-family: 'Inter', sans-serif;
-    font-size: 1.13rem;
-    font-weight: 700;
+    font-size: 1.7rem;
 }
 
-.card-stats .stats-info {
-    font-size: 0.63rem;
+.stats-des{
+    padding-top: .3rem;
+    font-size: 1rem;
+    font-weight: 400;
     text-transform: uppercase;
+    letter-spacing: .1rem;
     color: var(--Slightly-transparent-white-stat-headings);
 }
 
 /* X Typography */
 
 /* Card */
-.container {
+.stats-container {
     width: 100%;
     min-height: 100vh;
+    padding: 2.4rem;
     display: grid;
-    grid: 1fr min-content / 1fr;
     place-items: center;
-    padding: 3.81rem 4.5rem;
-    row-gap: 1rem;
 }
 
-.card {
-    /* width: 100%;
-    max-width: 14.38rem; */
-    width: 14.38rem;
-    height: auto;
-    background-color: var(--Dark-desaturated-blue-card-background);
-    border-radius: 0.63rem;
-    display: flex;
-    flex-flow: column nowrap;
-    gap: 1.63rem;
-    overflow: hidden;
-}
-
-.card-image {
-    background: url('../images/image-header-desktop.jpg');
-    background-repeat: no-repeat;
-    background-size: cover;
-    position: relative;
+.stats-card {
     width: 100%;
-    height: 10.5rem;
+    max-width: 37.5rem;
+    height: auto;
+    display: grid;
+    /* grid-template-columns: 1fr; */
+    grid: 
+        "img" min-content
+        "stats-content" min-content / 1fr;
+    justify-items: center;
+    background-color: var(--Dark-desaturated-blue-card-background);
+    border-radius: 0.8rem;
+    overflow: hidden;
+} 
+
+.image-container {
+    width: 100%;
+    background-color: var(--Soft-violet-accent);
 }
 
-.overlay {
-    background-color: var(--Soft-violet-accent);
-    opacity: 0.6;
-    position: absolute;
-    top: 0;
-    left: 0;
+.image-container img {
     width: 100%;
     height: 100%;
+    mix-blend-mode: multiply;
+    object-fit: cover;
+    opacity: 0.75;
 }
 
-.card-content {
-    padding: 0 1.63rem 1.56rem;
+.stats-content {
+    width: 100%;
+    padding: 2.6rem 2.6rem 2.5rem;
     display: flex;
     flex-flow: column nowrap;
-    gap: 1.88rem;
+    gap: 1.2rem;
     text-align: center;
 }
 
-.pry-content {
+.stats-info {
+    padding-top: 1.8rem;
     display: flex;
     flex-flow: column nowrap;
-    gap: 0.75rem;
-}
-
-.sec-content {
-    display: flex;
-    flex-flow: column nowrap;
-    gap: 1.25rem;
-}
-
-/* footer */
-.attribution { 
-    font-size: 11px; 
-    text-align: center; 
-}
-.attribution a { 
-    color: var(--Soft-violet-accent); 
-    text-decoration: none;
+    gap: 2rem;
 }
 /* X Card */
 
-/*  */
+@media screen and (min-width: 1200px) {
+    /* Typography */
+    .stats-header {
+        font-weight: 700;
+        line-height: 4rem;
+    }
+    
+    .stats-details {
+        font-size: 1.5rem;
+        font-weight: 500;
+        line-height: 2.5rem;
+        opacity: 0.75;
+    }
+    
+    .stats-value {
+        font-family: 'Inter', sans-serif;
+        font-size: 2.4rem;
+    }
+    
+    .stats-des{
+        padding-top: .5rem;
+        font-size: 1.4rem;
+    }
+
+    /* X Typography */
+
+    /* Card */
+    .stats-card {
+        max-width: 111rem;
+        grid: "stats-content img" min-content / 1fr 54.1rem;
+    }
+
+    .image-container {
+        order: 2;
+    }
+
+    .stats-content {
+        padding: 7.2rem 12.1rem 6.6rem 7.3rem;
+        text-align: left;
+        gap: 2.7rem;
+    }
+
+    .stats-content .stats-info {
+        display: flex;
+        flex-flow: row nowrap;
+        gap: 8.7rem;
+    }
+
+    /* X Card */
+
+    
+}
